sandbox/output
StringCalculator.java:5: error: cannot find symbol
        List<String> numbers = StringToIntParser.parse(string);
                               ^
  symbol:   variable StringToIntParser
  location: class StringCalculator
1 error
